--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,12 @@
 
 @import "{{ site.theme }}";
 
+/* Site header */
+#header_wrap header {
+    padding: 10px;
+    #project_tagline { display: none; }
+}
+
 /* Song */
 article.song {
     font-size: 18pt;
